Kubernetes-Basic-Advance-Labs/Kubernetes-Labs/demo-network-policies/deployment-myapp-outside.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-outside
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp-outside 
  template:
    metadata:
      labels:
        app: myapp-outside
    spec:
      containers:
      - name: myapp-outside
        image: nginx
        ports:
        - containerPort: 80
