Kubernetes-Basic-Advance-Labs/Kubernetes-Labs/demo-network-policies/deployment-resource-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql 
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: quay.io/cprakash2118/rhel8-mysql-80
        ports:
        - containerPort: 3306
