Kubernetes-Basic-Advance-Labs/Kubernetes-Labs/demo-network-policies/service-resource-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: famous-quotes
spec:
  type: LoadBalancer
  selector:
    app: famous-quotes
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
