Kubernetes-Basic-Advance-Labs/Kubernetes-Labs/demo-network-policies/service-resource-myapp-outside.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-outside 
spec:
  type: LoadBalancer
  selector:
    app: myapp-outside
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
