Kubernetes-Basic-Advance-Labs/Kubernetes-Labs/demo-network-policies/service-resource-myapp.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp
spec:
  type: LoadBalancer
  selector:
    app: myapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
