Kubernetes-Basic-Advance-Labs/Kubernetes-Labs/demo-network-policies/allow-specific2.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-specific2
spec:
  podSelector:
    matchLabels:
      app: famous-quotes
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            network: network-policies
        podSelector:
          matchLabels:
            app: mysql
      ports:
      - port: 8000
        protocol: TCP
