Kubernetes-Basic-Advance-Labs/Kubernetes-Labs/demo-network-policies/allow-specific3.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-specific-3rd
spec:
  podSelector:
    matchLabels:
      #deployment: mysql
      app: mysql
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            network: network-policies-02
        podSelector:
          matchLabels:
            #deployment: famous-quotes
            app: myapp-outside
      ports:
      - port: 3306
        protocol: TCP
